Support #37065 - Issue with non-wrapping test object store (#1689)
* Support #37065 - Issue with non-wrapping test object store

- Moved the Header into it's own component to make it easier to add functionality to it.

* Support #37065 - Issue with non-wrapping test object store

- Fixed issue with thumbnails, not uses maxHeight instead of forcing the height (Also fixes issue with stretched wide images)
- Dates in tables now configured never to wrap.
- View details link is set to never wrap.
- Reverted the SmartHeader stuff.

* Support #37065 - Issue with non-wrapping test object store

- Improved more no-wrapping rules.
- Fixed issue when hovering over a column it doesn't expand properly.
- Max-height added to the header with (...) added if it's too large.

* Support #37065 - Issue with non-wrapping test object store

- Fixed issue with Gallery view not being selectable.
- Fixed issue with dropdown menus appearing under the column/table data.

--- a/packages/common-ui/common-ui-style.scss
+++ b/packages/common-ui/common-ui-style.scss
@@ -397,6 +397,13 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 /*
+ * React Select Styles
+ */
+.ReactTable .-pagination .react-select__menu {
+  z-index: 3; 
+}
+
+/*
  * React Table Styles
  */
 .react-table-overflow .rt-td, 
@@ -409,7 +416,6 @@ input[type="number"]::-webkit-outer-spin-button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 0.5rem;
 }
 
 .table-top-controls .pagination-top {
